| Bug #42754 | Foreign keys: ndb_alter_table_backup test crashes | ||
|---|---|---|---|
| Submitted: | 11 Feb 2009 9:00 | Modified: | 23 Feb 2009 6:34 |
| Reporter: | Dmitry Lenev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 6.1.0-alpha-debug | OS: | Any |
| Assigned to: | Dmitry Lenev | CPU Architecture: | Any |
[11 Feb 2009 9:00]
Dmitry Lenev
[12 Feb 2009 17:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66075 2709 Dmitry Lenev 2009-02-12 Fix for bug #42754 "Foreign keys: ndb_alter_table_backup test crashes". Server failed due to assertion failure caused by the fact that it mixed up information about tablespace and column storage types in .FRM coming from MySQL Cluster/CGE with description of new foreign keys. This issue has been caused by the wrong merge which removed code providing compatibility with such FRMs. This merge occured on 2008-08-18 and replaced code from 2007-11-20 with older code from 2007-05-23. This fix simply reverts wrong merge. The suggestion is to push it into 6.0.
[16 Feb 2009 12:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66474 2727 Dmitry Lenev 2009-02-16 Fix for bug #42754 "Foreign keys: ndb_alter_table_backup test crashes". Server failed due to assertion failure caused by the fact that it mixed up information about tablespace and column storage types in .FRM coming from MySQL Cluster/CGE with description of new foreign keys (see mysql-6.1-fk tree). This issue has been caused by the wrong merge which removed code providing compatibility with such FRMs. This merge occured on 2008-08-18 and replaced code from 2007-11-20 with older code from 2007-05-23. This fix simply reverts wrong merge.
[23 Feb 2009 6:34]
Dmitry Lenev
Fix for this bug was queued into mysql-6.0-runtime and mysql-6.1-fk tree. Since problem reported occurred only in tree which is not publicly available yet I am simply closing this bug-report.
[6 Mar 2009 19:19]
Bugs System
Pushed into 6.0.11-alpha (revid:alik@sun.com-20090306190634-6s4zeti557q6stly) (version source revid:dlenev@mysql.com-20090216122231-k4lh6gjpsc19bp7q) (merge vers: 6.0.10-alpha) (pib:6)
