Fix for bug #42754 "Foreign keys: ndb_alter_table_backup test crashes".

Server failed due to assertion failure caused by the fact that
it mixed up information about tablespace and column storage
types in .FRM coming from MySQL Cluster/CGE with description
of new foreign keys (see mysql-6.1-fk tree).

This issue has been caused by the wrong merge which removed
code providing compatibility with such FRMs. This merge
occured on 2008-08-18 and replaced code from 2007-11-20
with older code from 2007-05-23.

This fix simply reverts wrong merge.